src/main/scala/pers/pudge/spark/practices/officialApi/a/antlr4/expr/Expr.g4
grammar Expr;

@header{package pers.pudge.spark.practices.officialApi.a.antlr4.expr;}

prog:	(expr NEWLINE)* ;
expr:	expr ('*'|'/') expr
    |	expr ('+'|'-') expr
    |	INT
    |	'(' expr ')'
    ;
NEWLINE : [\r\n]+ ;
INT     : [0-9]+ ;
